TEST: convert PSMultiLevelCacheTest to JUnit 5 assertion order + generics fixes